[package]
name = "agent-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
telebot-shared = { path = "../shared" }
lambda_runtime = "0.13"
aws_lambda_events = { version = "0.16", default-features = false, features = [
    "apigw",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
teloxide = { version = "0.14", default-features = false, features = ["rustls"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
