[package]
name = "agent-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
aws-sdk-ssm = "1"
chrono = "0.4.43"
chrono-tz = "0.10.4"
lambda_http = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1"
teloxide = { version = "0.17.0", default-features = false, features = [
    "rustls",
] }
telebot-shared = { path = "../shared" }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
