[package]
name = "posting-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4.43"
lambda_runtime = "1.0.2"
once_cell = "1.21.3"
teloxide = { version = "0.17.0", default-features = false, features = [
    "rustls",
] }
telebot-shared = { path = "../shared" }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
