[package]
name = "scheduling-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-scheduler = "1.93.0"
aws_lambda_events = { version = "1.0.3", default-features = false, features = [
    "dynamodb",
] }
lambda_runtime = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1"
telebot-shared = { path = "../shared" }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
