[package]
name = "telebot-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
aws-smithy-types = "1.4.4"
chrono = "0.4.43"
serde = { version = "1.0", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
teloxide = { version = "0.17.0", default-features = false, features = [
    "rustls",
] }
tracing = "0.1"
